added SuppressWarnings to caseUpdateFieldsRequest method